--- a/src/app/system/dashboard/dashboard.component.html
+++ b/src/app/system/dashboard/dashboard.component.html
@@ -1,2 +1,43 @@
 
 <h1 class="text-gray-500">Dashboard</h1>
+
+<section>
+    <p  style="margin-bottom: 1rem;">Distributor Info</p>
+
+    <section class="grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 gap-8 mb-4 pb-2">
+        <div class="p-4 bg-white shadow-md rounded-md">
+            <p class="text-gray-500 font-light">Name</p>
+            <p class="text-lg font-light text-gray-700">
+                {{distributor?.firstName}} {{distributor?.lastName}}
+            </p>
+        </div>
+        
+        <div class="p-4 bg-white shadow-md rounded-md">
+            <p class="text-gray-500 font-light">Email Address</p>
+            <p class="text-lg font-light text-gray-700">
+                {{distributor?.emailAddress || '_'}}
+            </p>
+        </div>
+        
+        <div class="p-4 bg-white shadow-md rounded-md">
+            <p class="text-gray-500 font-light">Phone Number</p>
+            <p class="text-lg font-light text-gray-700">
+                {{distributor?.phoneNumber || '_'}}
+            </p>
+        </div>
+    </section>
+
+    <section class="p-4 bg-white shadow-md rounded-md">
+        <div>
+            <p>Current Stage</p>
+            <p>{{distributor?.stage?.name}}</p>
+        </div>
+    </section>
+
+    <section *ngIf="latestNews" class="bg-white shadow-md p-4 my-12">
+        <p class="text-blue-700 font-medium text-xl">Latest News!</p>
+        <div>
+            <p class="text-lg">{{latestNews?.message}}</p>
+        </div>
+    </section>
+</section>
