--- a/src/app/system/wallet-detail/wallet-detail.component.html
+++ b/src/app/system/wallet-detail/wallet-detail.component.html
@@ -1,7 +1,10 @@
 
 <section>
     <mat-card class="space-y-4 mb-8">
-        <p class="text-xl font-light mb-6">Wallet Info</p>
+        <span class="flex items-center justify-between space-x-4">
+            <p class="text-xl font-light mb-6">Wallet Info</p>
+            <button mat-raised-button color="primary">CHANGE PIN</button>
+        </span>
 
         <div class="space-y-4">
             <p class="text-gray-600 font-light">Balance</p>
