--- a/src/app/admin/transaction-detail/transaction-detail.component.html
+++ b/src/app/admin/transaction-detail/transaction-detail.component.html
@@ -24,7 +24,7 @@
         </p>
     </div>
     
-    <div class='font-medium flex items-end'>
+    <div class='font-medium flex items-end border-b pb-2'>
         <span class='block w-1/3'>
             <p class="text-gray-400">
                 @{{transaction?.wallet?.distributor?.username}}
@@ -36,6 +36,24 @@
         </span>
 
         <p class='w-1/3 text-2xl'>${{transaction?.amount?.toFixed(2)}}</p>
+    </div>
+
+    <div class="space-y-4 border-b pb-2">
+        <p class="text-2xl">Bank Details</p>
+        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <span>
+                <p class="text-lg text-gray-600">Bank Name</p>
+                <p>{{transaction?.wallet?.distributor?.bankName}}</p>
+            </span>
+            <span>
+                <p class="text-lg text-gray-600">Account Number</p>
+                <p>{{transaction?.wallet?.distributor?.accountNumber}}</p>
+            </span>
+            <span>
+                <p class="text-lg text-gray-600">Swift Code</p>
+                <p>{{transaction?.wallet?.distributor?.swiftCode}}</p>
+            </span>
+        </div>
     </div>
 
 
