--- a/src/app/system/wallet-detail/wallet-detail.component.html
+++ b/src/app/system/wallet-detail/wallet-detail.component.html
@@ -3,7 +3,11 @@
     <mat-card class="space-y-4 mb-8">
         <span class="flex items-center justify-between space-x-4">
             <p class="text-xl font-light mb-6">Wallet Info</p>
-            <button mat-raised-button color="primary">CHANGE PIN</button>
+            <button mat-raised-button color="primary"
+                (click)="changePin()">
+                <span *ngIf="wallet && wallet?.pin">CHANGE PIN</span>
+                <span *ngIf="wallet && !wallet?.pin">SET WALLET PIN</span>
+            </button>
         </span>
 
         <div class="space-y-4">
