--- a/src/app/system/new-wallet-pin-dialog/new-wallet-pin-dialog.component.html
+++ b/src/app/system/new-wallet-pin-dialog/new-wallet-pin-dialog.component.html
@@ -11,8 +11,9 @@
                 <section>
                     <mat-form-field class="w-full">
                         <mat-label>Enter a 4-Digit Pin</mat-label>
-                        <input matInput type="password"
-                            formControlName="pin" maxlength="3" />
+                        <input matInput type="password" required
+                            formControlName="pin" minlength="4" maxlength="4" />
+                        <mat-error></mat-error>
                     </mat-form-field>
                 </section>
 
